re PR rtl-optimization/34085 (ICE with -freorder-blocks-and-partition)

Fix PR rtl-optimization/34085

Co-Authored-By: Revital Eres <eres@il.ibm.com>

From-SVN: r130435