gcc/bb-reorder.c
@@ -1947,6 +1947,9 @@ insert_section_boundary_note (void)
 	{
 	  new_note = emit_note_before (NOTE_INSN_SWITCH_TEXT_SECTIONS,
 				       BB_HEAD (bb));
+	  /* ??? This kind of note always lives between basic blocks,
+	     but add_insn_before will set BLOCK_FOR_INSN anyway.  */
+	  BLOCK_FOR_INSN (new_note) = NULL;
 	  break;
 	}
     }
